runtime/samples/SalesforceFoundation/Cumulus/src/objects/Trigger_Handler__c.object
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that this module is active</description>
        <inlineHelpText>Indicates that this module is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this module should be run asynchronously in this transaction, for any of its After events.</description>
        <inlineHelpText>Indicates that this module should be run asynchronously in this transaction, for any of its After events.</inlineHelpText>
        <label>Asynchronous After Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Name of the class to be run</description>
        <inlineHelpText>Name of the class to be run</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Order__c</fullName>
        <description>Order in which this module should be run, helps maintain dependencies in the modules and data.</description>
        <inlineHelpText>Order in which this module should be run, helps maintain dependencies in the modules and data.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Name of the object this handler should be run for</description>
        <inlineHelpText>Name of the object this handler should be run for</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Action__c</fullName>
        <description>Trigger Action in which this module should fire</description>
        <inlineHelpText>Trigger Action in which this module should fire</inlineHelpText>
        <label>Trigger Action</label>
        <picklist>
            <picklistValues>
                <fullName>BeforeInsert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeforeUpdate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeforeDelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterInsert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterUpdate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterDelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterUndelete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The record is managed by the user and updates won&apos;t be pushed to it.</description>
        <inlineHelpText>Check it if you intent to manage the record yourself. Be aware that updates to the package won&apos;t update the record.</inlineHelpText>
        <label>User Managed</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Handler</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>